Part of fix to allow background on BODY element to be inherited. b=47127 r=pierre